[metadata]
name = darker
version = attr: darker.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE.rst
description = Apply Black formatting only in regions changed since last commit
# long_description is read and manipulated in setup.py
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source Code = https://github.com/akaihola/darker
    Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
    News = https://github.com/akaihola/darker/discussions/categories/announcements
url = https://github.com/akaihola/darker

[options]
include_package_data = True
package_dir =
    =src
packages = find:

[options.entry_points]
darker.formatter =
    black = darker.formatters.black_formatter:BlackFormatter
    none = darker.formatters.none_formatter:NoneFormatter
console_scripts =
    darker = darker.__main__:main_with_error_handling

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # C408 Unnecessary dict call - rewrite as a literal.
    C408
    # D400 First line should end with a period (from flake8-docstrings)
    D400
    # D415 First line should end with a period, question mark, or exclamation point
    D415
    # E231 missing whitespace after ','
    E231
    # W503 line break before binary operator
    W503
# Darglint options when run as a Flake8 plugin:
strictness = short
docstring_style = sphinx
# This requires https://github.com/terrencepreilly/darglint/pull/210:
darglint_ignore_regex=^test_

[darglint]
# Run `darglint --verbosity=2` to get nice descriptions in messages.
# Unfortunately `verbosity` isn't read from the configuration file.
message_template = {path}:{line}: {msg} {msg_id} {obj}
docstring_style = sphinx
ignore_regex = ^test_

[codespell]
ignore-words-list = nd
skip = .git,*.json
