[metadata]
name = darker
version = attr: darker.version.__version__
author = Antti Kaihola
author_email = 13725+akaihola@users.noreply.github.com
license = BSD
license_file = LICENSE.rst
description = Apply Black formatting only in regions changed since last commit
# long_description is read and manipulated in setup.py
long_description_content_type = text/x-rst
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    Source Code = https://github.com/akaihola/darker
    Change Log = https://github.com/akaihola/darker/blob/master/CHANGES.rst
    News = https://github.com/akaihola/darker/discussions/categories/announcements
url = https://github.com/akaihola/darker

[options]
include_package_data = True
package_dir =
    =src
packages = find:
install_requires =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    darkgraylib~=2.2.0
    toml>=0.10.0
    typing_extensions>=4.0.1
# NOTE: remember to keep `.github/workflows/python-package.yml` in sync
#       with the minimum required Python version
python_requires = >=3.9

[options.packages.find]
where = src

[options.package_data]
darker =
  py.typed
  .pyi

[options.entry_points]
darker.formatter =
    black = darker.formatters.black_formatter:BlackFormatter
    ruff = darker.formatters.ruff_formatter:RuffFormatter
    none = darker.formatters.none_formatter:NoneFormatter
console_scripts =
    darker = darker.__main__:main_with_error_handling

[options.extras_require]
black =
    black>=22.3.0
flynt =
    flynt>=0.76
isort =
    isort>=5.0.1
color =
    Pygments>=2.4.0
test =
    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
    black>=22.3.0
    cryptography>=3.3.2  # through twine, fixes CVE-2020-36242
    defusedxml>=0.7.1
    flynt>=0.76
    isort>=5.0.1
    mypy>=0.990
    pathspec  # to test `gen_python_files` in `test_black_diff.py`
    pydocstyle
    pygments
    pylint<=3.2.7  # pylint 3.3.0 dropped Python 3.8 support
    pytest>=6.2.0
    pytest-kwparametrize>=0.0.3
    regex>=2021.4.4
    requests_cache>=0.7
    ruamel.yaml>=0.17.21
    ruff>=0.0.292
    twine>=2.0.0
    types-requests>=2.27.9
    types-toml>=0.10.4
    urllib3>=1.25.9  # through requests-cache and twine, fixes CVE-2020-26137
    wheel>=0.21.0
release =
    darkgray-dev-tools~=0.1.1

[flake8]
# Line length according to Black rules
max-line-length = 88
# Ignore rules which conflict with Black
ignore =
    # C408 Unnecessary dict call - rewrite as a literal.
    C408
    # D400 First line should end with a period (from flake8-docstrings)
    D400
    # D415 First line should end with a period, question mark, or exclamation point
    D415
    # E203 Whitespace before ':'
    E203
    # E231 missing whitespace after ','
    E231
    # E501 Line too long (82 > 79 characters)
    E501
    # E701 Multiple statements on one line (colon)
    E701
    # W503 line break before binary operator
    W503
# Darglint options when run as a Flake8 plugin:
strictness = short
docstring_style = sphinx
# This requires https://github.com/terrencepreilly/darglint/pull/210:
darglint_ignore_regex=^test_

[darglint]
# Run `darglint --verbosity=2` to get nice descriptions in messages.
# Unfortunately `verbosity` isn't read from the configuration file.
message_template = {path}:{line}: {msg} {msg_id} {obj}
docstring_style = sphinx
ignore_regex = ^test_

[codespell]
ignore-words-list = nd
skip = .git,*.json
